fixed alignment issue

--- a/Gutenberg/src/embedpress/style.scss
+++ b/Gutenberg/src/embedpress/style.scss
@@ -760,3 +760,31 @@ button.ep-remove__image {
 .ep-yt-related-videos .components-base-control {
     margin-bottom: 10px!important;
 }
+
+.ep-custom-logo-button{
+    margin-bottom: 0px!important;
+}
+
+
+.ep-custom-logo-button .isPro {
+    top: 50%;
+    transform: translate(0%, -50%);
+}
+
+.ep-yt-related-videos p{
+    margin-top: calc(8px);
+    font-size: 12px;
+    font-style: normal;
+    color: rgb(117, 117, 117);
+    margin-bottom: revert;
+}
+
+span.ep-wistia-message {
+    position: absolute;
+    left: 50%;
+    background: white;
+    border-radius: 15px;
+    padding: 8px 15px;
+    top: 32%;
+    transform: translate(-50%, -50%);
+}
